--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
 * {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-family: "Handlee", cursive;
 }
 
 body {
   padding: 0;
   margin: 0;
-  background: #181f2a;
   color: white;
+  font-size: 14px;
+  background: #1c2431;
 }
 
 nav {
@@ -51,5 +54,182 @@ nav .menu-nav__item {
 nav .menu-nav__item .link {
   color: white;
   text-decoration: none;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .texts {
+  text-align: center;
+  margin-top: 25px;
+  padding: 50px;
+}
+
+.container .texts h3 {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.container .texts p {
+  font-weight: 300;
+  font-size: 15px;
+  margin-top: 10px;
+}
+
+.container .texts button {
+  height: 2.5rem;
+  margin: 15px 0 0 0;
+  font-size: 15px;
+  border: none;
+  color: #fff;
+  border-radius: 25px;
+  padding: 5px 3rem 5px 3rem;
+  background: -webkit-gradient(linear, left top, right top, from(#65e2d9), to(#339ecc));
+  background: linear-gradient(to right, #65e2d9, #339ecc);
+  cursor: pointer;
+  outline: none;
+  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.container .texts button:active {
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+}
+
+.articles {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-gap: 1px;
+  padding: 4rem 10rem 0 10rem;
+  background: url("../images/bg-curvy-desktop.svg") center top;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.articles__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 20px;
+}
+
+.articles__list .texts {
+  text-align: center;
+  padding: 10px 30px;
+}
+
+.articles__list .texts h6 {
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.articles__list .texts p {
+  font-size: 13px;
+  font-weight: 100;
+  padding: 0 7rem;
+}
+
+.productive {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #181f2a;
+  padding: 4rem 7rem;
+}
+
+.productive .prod {
+  padding: 30px;
+  margin: 0 5rem;
+}
+
+.productive .texts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 50px;
+}
+
+.productive .texts h3 {
+  font-size: 2rem;
+  width: 70%;
+  font-weight: 400;
+}
+
+.productive .texts p {
+  font-weight: 300;
+  font-size: 15px;
+  margin-top: 15px;
+}
+
+.productive .texts .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-top: 10px;
+  text-decoration: underline;
+}
+
+.productive .texts .flex a {
+  text-decoration: none;
+  color: #65e2d9;
+}
+
+.productive .texts .flex img {
+  width: 20px;
 }
 /*# sourceMappingURL=main.css.map */
