--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,35 +1,165 @@
-@import './config';
+@import "./config";
 
-body{
-    padding: 0;
-    margin: 0;
-    background: $DarkBlueMain;
-    color: $White;
+body {
+  padding: 0;
+  margin: 0;
+  color: $White;
+  font-size: 14px;
+  background: $DarkBlueIntro;
 }
 
-nav{
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px;
+
+  img {
+    width: 150px;
+  }
+
+  .menu-nav {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+
+    &__item {
+      margin: 25px;
+
+      .link {
+        color: $White;
+        text-decoration: none;
+      }
+    }
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+
+  .texts {
+    text-align: center;
+    margin-top: 25px;
+    padding: 50px;
+
+    h3 {
+      font-size: 2rem;
+      font-weight: 400;
+    }
+    p {
+      font-weight: 300;
+      font-size: 15px;
+      margin-top: 10px;
+    }
+    button {
+      height: 2.5rem;
+      margin: 15px 0 0 0;
+      font-size: 15px;
+      border: none;
+      color: #fff;
+      border-radius: 25px;
+      padding: 5px 3rem 5px 3rem;
+      background: linear-gradient(to right, $Cyan, $Blue);
+      cursor: pointer;
+      outline: none;
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+
+      &:active {
+        transition: all 0.5s ease-in-out;
+        transform: translateY(10px);
+      }
+    }
+  }
+}
+
+.articles{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    grid-gap: 1px;
+    padding: 4rem 10rem 0 10rem;
+    background: url('../images/bg-curvy-desktop.svg') center top;
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+    &__list{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 10px 20px;
+
+
+        .texts{
+            text-align: center;
+            padding: 10px 30px;
+
+            h6{
+                font-size: 1.5rem;
+                font-weight: 300;
+            }
+
+            p{
+                font-size: 13px;
+                font-weight: 100;
+                padding: 0 7rem;
+            }
+
+        }
+    }
+}
+
+.productive {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 40px;
-
-    img{
-        width: 150px;
+    background: $DarkBlueMain;
+    padding: 4rem 7rem;
+    
+    .prod{
+        padding: 30px;
+        margin: 0 5rem;
     }
+    
+  
+    .texts {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 50px;
+  
+      h3 {
+        font-size: 2rem;
+        width: 70%;
+        font-weight: 400;
+      }
+      p {
+        font-weight: 300;
+        font-size: 15px;
+        margin-top: 15px;
+      }
 
-    .menu-nav{
-        display: flex;
-        flex-direction: row;
-        list-style: none;
-
-        &__item{
-            margin: 25px;
-
-            .link{
-                color: $White;
-                text-decoration: none;
-            }
-        }
+      .flex{
+          display: flex;
+          flex-direction: row;
+          margin-top: 10px;
+          text-decoration: underline;
+          
+          a{
+              text-decoration: none;
+              color: $Cyan;
+          }
+          
+          img{
+              width: 20px;
+          }
+      }
     }
 }
