--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 $DarkBlueIntro : hsl(217, 28%, 15%);
 $DarkBlueMain: hsl(218, 28%, 13%);
 $DarkBlueFooter: hsl(216, 53%, 9%);
@@ -17,5 +17,5 @@ $White: hsl(0, 0%, 100%);
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Handlee", cursive;
+    font-family: 'Open Sans', sans-serif;
 }
