--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,7 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 40px;
+  padding: 40px 50px;
 
   img {
     width: 150px;
@@ -167,7 +167,7 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 4rem 10rem 15rem 10rem;
+    padding: 4rem 10rem 18rem 10rem;
 
     .test_profile {
       background: $DarkBlueTest;
@@ -209,7 +209,7 @@ nav {
   align-items: center;
   margin-top: 20px;
   position: absolute;
-  left: 18rem;
+  left: 17rem;
   top: 300%;
   background: $DarkBlueIntro;
   padding: 4rem 5rem;
@@ -241,6 +241,7 @@ nav {
       margin: 0 20px;
       outline: none;
       padding: 10px;
+      opacity: 0.9;
 
       &:focus{
           border: 1.5px solid $Cyan;
@@ -276,7 +277,7 @@ footer {
   justify-content: space-around;
   align-items: center;
   background: $DarkBlueFooter;
-  padding: 6rem;
+  padding: 10rem 8rem;
 
   &_list {
     display: flex;
@@ -316,3 +317,5 @@ footer {
 .attribution a {
   color: $Cyan;
 }
+
+@import './responsive';
