--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,7 +48,9 @@ nav {
 
     h3 {
       font-size: 2rem;
-      font-weight: 400;
+      font-weight: 300;
+      width: 25rem;
+      text-align: center;
     }
     p {
       font-weight: 300;
