--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,10 +47,9 @@ nav {
     padding: 50px;
 
     h3 {
-      font-size: 2rem;
+      font-size: 1.5rem;
       font-weight: 300;
       width: 25rem;
-      text-align: center;
     }
     p {
       font-weight: 300;
@@ -94,7 +93,7 @@ nav {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 50px;
 
     .texts {
       text-align: center;
@@ -108,7 +107,7 @@ nav {
       p {
         font-size: 13px;
         font-weight: 100;
-        padding: 0 7rem;
+        padding: 0 3rem;
       }
     }
   }
@@ -134,15 +133,15 @@ nav {
       flex-direction: column;
       justify-content: center;
       padding: 50px;
+      text-align: center;
 
       h3 {
-        font-size: 2rem;
-        width: 70%;
+        font-size: 1.5rem;
         font-weight: 400;
       }
       p {
         font-weight: 300;
-        font-size: 15px;
+        font-size: 13px;
         margin-top: 15px;
       }
 
@@ -159,6 +158,7 @@ nav {
 
         img {
           width: 20px;
+          padding-bottom: 20px;
         }
       }
     }
@@ -175,7 +175,7 @@ nav {
       background: $DarkBlueTest;
       box-shadow: 0 3px 5px rgba(12, 8, 8, 0.5);
       margin: 0.5rem 1rem;
-      padding: 2rem;
+      padding: 2.5rem;
 
       .profile {
         display: flex;
