--- a/css/main.css
+++ b/css/main.css
@@ -236,7 +236,6 @@ nav .menu-nav__item .link {
 
 .main .productive .texts .flex img {
   width: 20px;
-  padding-bottom: 20px;
 }
 
 .main .testimonial {
@@ -258,8 +257,8 @@ nav .menu-nav__item .link {
 
 .main .testimonial .test_profile {
   background: #202a3c;
-  -webkit-box-shadow: 0 3px 5px rgba(12, 8, 8, 0.5);
-          box-shadow: 0 3px 5px rgba(12, 8, 8, 0.5);
+  -webkit-box-shadow: 0 3px 5px rgba(122, 122, 122, 0.5);
+          box-shadow: 0 3px 5px rgba(122, 122, 122, 0.5);
   margin: 0.5rem 1rem;
   padding: 2.5rem;
 }
@@ -313,12 +312,12 @@ nav .menu-nav__item .link {
   margin-top: 20px;
   position: absolute;
   left: 17rem;
-  top: 300%;
+  top: 310%;
   background: #1c2431;
   padding: 4rem 5rem;
   border-radius: 5px;
-  -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
-          box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 3px 5px rgba(253, 253, 253, 0.3);
+          box-shadow: 0 3px 5px rgba(253, 253, 253, 0.3);
 }
 
 .access h1 {
@@ -397,11 +396,9 @@ footer {
   display: grid;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   background: #0b1523;
   padding: 10rem 8rem;
 }
@@ -441,12 +438,33 @@ footer {
   margin: 0 20px;
 }
 
-.footer_list ul {
+.footer_list .foot i {
+  margin: 5px;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  padding: 5px;
+}
+
+.footer_list .ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer_list .ul ul {
   list-style: none;
   margin: 0 20px;
 }
 
-.footer_list ul li {
+.footer_list .ul ul li {
   margin: 5px;
 }
 
@@ -516,21 +534,31 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding: 0;
   }
   .main .productive .prod {
     padding: 0;
     margin: 0;
-    width: 150%;
+    width: 100%;
   }
   .main .productive .texts {
     margin-top: 20px;
     padding: 0;
   }
   .main .productive .texts h3 {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
   }
   .main .productive .texts p {
     font-size: 13px;
+    padding: 0 10px;
+  }
+  .main .productive .texts .flex {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .main .testimonial {
     display: -webkit-box;
@@ -540,7 +568,7 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding: 3rem 2rem 10rem 2rem;
+    padding: 2rem 0;
   }
   .access {
     display: -webkit-box;
@@ -556,16 +584,18 @@ footer {
     position: relative;
     left: 0rem;
     top: 4rem;
-    padding: 4rem 4rem;
-    margin: 0 2rem;
+    padding: 1.5rem 2rem;
+    margin: 0 1rem;
   }
   .access h1 {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-weight: 300;
+    text-align: center;
   }
   .access p {
     font-size: 14px;
     width: 100%;
+    text-align: center;
   }
   .access .btn {
     display: -webkit-box;
@@ -584,7 +614,7 @@ footer {
     margin-top: 15px;
   }
   .access .btn input {
-    width: 300px;
+    width: 250px;
     margin: 15px 20px;
     padding: 10px;
   }
@@ -605,6 +635,21 @@ footer {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    padding: 8rem 5px;
+  }
+  .footer_list {
+    margin: 15px 0;
+  }
+  .footer_list #logo {
+    width: 100px;
+    margin-left: 10px;
+  }
+  .footer_list .ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 3rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
