--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -64,22 +64,28 @@
   .main {
   .productive {
     flex-direction: column;
+    padding: 0;
 
     .prod {
         padding: 0;
         margin: 0;
-        width: 150%;
+        width: 100%;
       }
 
       .texts {
-          margin-top: 20px;
+         margin-top: 20px;
         padding: 0;
 
         h3{
-            font-size: 1.1rem;
+            font-size: 1.5rem;
         }
         p{
             font-size: 13px;
+            padding: 0 10px;
+        }
+        .flex {
+          justify-content: center;
+          align-items: center;
         }
     }
 }
@@ -87,7 +93,7 @@
 .testimonial {
     display: flex;
     flex-direction: column;
-    padding: 3rem 2rem 10rem 2rem;
+    padding: 2rem 0;
 }
 }
 
@@ -98,16 +104,18 @@
   position: relative;
   left: 0rem;
   top: 4rem;
-  padding: 4rem 4rem;
-  margin: 0 2rem;
+  padding: 1.5rem 2rem;
+  margin: 0 1rem;
 
   h1 {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-weight: 300;
+    text-align: center;
   }
   p {
     font-size: 14px;
     width: 100%;
+    text-align: center;
   }
 
   .btn {
@@ -118,7 +126,7 @@
     margin-top: 15px;
 
     input {
-      width: 300px;
+      width: 250px;
       margin: 15px 20px;
       padding: 10px;
     }
@@ -130,8 +138,21 @@
 .footer {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content:  flex-start;
     align-items: flex-start;
+    padding: 8rem 5px;
+
+    &_list {
+      margin: 15px 0;
+      #logo {
+        width: 100px;
+        margin-left: 10px;
+      }
+      .ul {
+        flex-direction: column;
+        margin-top: 3rem;
+      }
+    }
 }
 
 }
