--- a/scss/main.scss
+++ b/scss/main.scss
@@ -158,7 +158,6 @@ nav {
 
         img {
           width: 20px;
-          padding-bottom: 20px;
         }
       }
     }
@@ -173,7 +172,7 @@ nav {
 
     .test_profile {
       background: $DarkBlueTest;
-      box-shadow: 0 3px 5px rgba(12, 8, 8, 0.5);
+      box-shadow: 0 3px 5px rgba(122, 122, 122, 0.5);
       margin: 0.5rem 1rem;
       padding: 2.5rem;
 
@@ -212,11 +211,11 @@ nav {
   margin-top: 20px;
   position: absolute;
   left: 17rem;
-  top: 300%;
+  top: 310%;
   background: $DarkBlueIntro;
   padding: 4rem 5rem;
   border-radius: 5px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 5px rgba(253, 253, 253, 0.3);
 
   h1 {
     font-size: 2rem;
@@ -276,8 +275,7 @@ footer {
 .footer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  justify-content: space-around;
-  align-items: center;
+  align-items: flex-end;
   background: $DarkBlueFooter;
   padding: 10rem 8rem;
 
@@ -299,8 +297,21 @@ footer {
       img {
         margin: 0 20px;
       }
+
+      i{
+        margin: 5px;
+        color: #fff;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        padding: 5px;
+      }
     }
 
+    .ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      
     ul {
       list-style: none;
       margin: 0 20px;
@@ -309,6 +320,8 @@ footer {
         margin: 5px;
       }
     }
+    }
+
   }
 }
 
