--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-$DarkBlueIntro : hsl(217, 28%, 15%);
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+$DarkBlueIntro: hsl(217, 28%, 15%);
 $DarkBlueMain: hsl(218, 28%, 13%);
 $DarkBlueFooter: hsl(216, 53%, 9%);
 $DarkBlueTest: hsl(219, 30%, 18%);
@@ -7,15 +7,15 @@ $DarkBlueTest: hsl(219, 30%, 18%);
 // ### Accent
 
 $Cyan: hsl(176, 68%, 64%);
-$Blue : hsl(198, 60%, 50%);
+$Blue: hsl(198, 60%, 50%);
 
 // ### Neutral
 
 $White: hsl(0, 0%, 100%);
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
